04_virtualservice/yaml/grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: example
spec:
  gateways:
  - example-gateway
  hosts:
  - grafana.example.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
