04_virtualservice/yaml/servicegraph.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: servicegraph
  namespace: example
spec:
  gateways:
  - example-gateway
  hosts:
  - servicegraph.example.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: servicegraph.istio-system.svc.cluster.local
        port:
          number: 8088
