04_virtualservice/yaml/tracing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tracing
  namespace: example
spec:
  gateways:
  - example-gateway
  hosts:
  - tracing.example.com
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: tracing.istio-system.svc.cluster.local
        port:
          number: 80
